--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -451,11 +451,44 @@ ul.alert-dropdown {
     }
 }
 .sorter {
-    margin-top: 15px;
-    margin-bottom: 15px;   
+    // margin-top: 15px;
+    // margin-bottom: 15px;   
     .dropdown-menu {
         width: 250px;
     }
+}
+
+.grid-default-filters {
+    max-width: 400px;
+    // padding: 20px 0px;    
+}
+.grid-header-block {
+    display: table-cell; 
+    // padding: 0px 10px;
+    vertical-align: middle;   
+}
+
+.grid-icon {
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.grid-container .multiselect {
+    background-color: white !important;
+    color: black;
+    border: none;
+    text-align: right;
+}
+.grid-container .multiselect:hover {
+    color: @theme-link-color !important;
+}
+.filters-advanced-icon {
+    text-align: right;
+    font-size: 14px;
+    margin-right: 8px;
+    text-decoration: underline;
+    color: @theme-link-color;
+    cursor: pointer;
 }
 
 /**bootstrap -override */
