--- a/templates/dashboard/partials/grid.html
+++ b/templates/dashboard/partials/grid.html
@@ -1,23 +1,45 @@
 <div class="grid-container">
     {{#if gridData.data}}
         <div class="row">
-            <div class="col-sm-6">
+            <!--<div class="col-sm-6">
                 <div class="pull-left">
                     {{#if drawSort}}
                         <div class="sort-container">
                         </div>
                     {{/if}}
                 </div>
-            </div>
+            </div>-->
             <div class="col-sm-6">
-                <div class="pull-right">
+                <div class="pull-left">
                     {{#if drawPager}}
                         <div class="pager-container">
                         </div>
                     {{/if}}
                 </div>
             </div>
-        </div>
+            <div class="col-sm-6">
+                <div class="pull-right">
+                    {{#if drawSort}}                                                
+                        <div class="sort-container">
+                        </div>                      
+                    {{/if}}
+                    {{#if drawFilters}}
+                         <div class="filters-container grid-header-block">
+                         </div>                        
+                    {{/if}}
+                    {{#if advancedFilters}}
+                        <div class="filters-advanced-icon">
+                             Advanced
+                        </div>
+                    {{/if}}                    
+                </div>
+            </div>
+        </div>    
+        {{#if advancedfilters}}
+            <div class="row">
+                
+            </div> 
+        {{/if}}           
     {{/if}}
     
     <div id="{{gridId}}" class="grid-data-container">
