dashboard dynamic menu added

--- a/templates/dashboard/pages/home.html
+++ b/templates/dashboard/pages/home.html
@@ -1,7 +1,10 @@
 {{{{raw-helper}}}}
 {{{{/raw-helper}}}}
 {{> header}}
-{{> cards}}
+{{> cards (getDashBoardMenu)}}
 {{> tile}}
 {{{{raw-helper}}}}
+<script type="text/javascript">
+    $(document).ready(function(){var e=API_HELPER.getLoggedInUser().menu.SideMenu[0];console.log("template data home",e)});
+</script>
 {{{{/raw-helper}}}}
