--- a/templates/dashboard/partials/cards.html
+++ b/templates/dashboard/partials/cards.html
@@ -1,19 +1,23 @@
-      <div class="row">
+   
+
+<div class="row">
+        
+        
             <div class="col-xl-3 col-lg-6">
-                <div class="card card-primary card-inverse">
-                    <div class="card-header card-primary">
+                <div class="card card-green card-inverse">
+                    <div class="card-header card-green">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-comments fa-5x"></i>
+                                <i class="fa fa-envelope  fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">26</div>
-                                <div>New Comments!</div>
+                                <div class="huge">0</div>
+                                <div>{{this.menu.SideMenu.0.options.0.title}}</div>
                             </div>
                         </div>
                     </div>
-                    <div class="card-footer card-default">
-                        <a href="javascript:;">
+                    <div class="card-footer card-green">
+                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.0.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -21,21 +25,22 @@
                     </div>
                 </div>
             </div>
+          
             <div class="col-xl-3 col-lg-6">
                 <div class="card card-green card-inverse">
                     <div class="card-header card-green">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-tasks fa-5x"></i>
+                                <i class="fa fa-truck  fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">12</div>
-                                <div>New Tasks!</div>
+                                <div class="huge">0</div>
+                                <div>{{this.menu.SideMenu.0.options.1.title}}</div>
                             </div>
                         </div>
                     </div>
                     <div class="card-footer card-green">
-                        <a href="javascript:;">
+                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.1.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -48,16 +53,16 @@
                     <div class="card-header card-yellow">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-shopping-cart fa-5x"></i>
+                                <i class="fa fa-suitcase fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">124</div>
-                                <div>New Orders!</div>
+                                <div class="huge">0</div>
+                                <div>{{this.menu.SideMenu.0.options.2.title}}</div>
                             </div>
                         </div>
                     </div>
                     <div class="card-footer card-yellow">
-                        <a href="javascript:;">
+                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.2.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
@@ -70,22 +75,22 @@
                     <div class="card-header card-red">
                         <div class="row">
                             <div class="col-xs-3">
-                                <i class="fa fa-support fa-5x"></i>
+                                <i class="fa fa-ticket fa-4x"></i>
                             </div>
                             <div class="col-xs-9 text-xs-right">
-                                <div class="huge">13</div>
-                                <div>Support Tickets!</div>
+                                <div class="huge">0</div>
+                                <div>{{this.menu.SideMenu.0.options.3.title}}</div>
                             </div>
                         </div>
                     </div>
                     <div class="card-footer card-red">
-                        <a href="javascript:;">
+                        <a href="javascript:MENU_HELPER.menuClick('{{this.menu.SideMenu.0.options.3.page}}');">
                             <span class="pull-xs-left">View Details</span>
                             <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
         <!-- /.row -->
