--- a/templates/dashboard/partials/griddefaultfilters.html
+++ b/templates/dashboard/partials/griddefaultfilters.html
@@ -9,3 +9,8 @@
         </span>
     </div>
 </div>
+{{#if moreFilters}}
+    <div class="grid-more-filters-button">
+        More Filters
+    </div>
+{{/if}}  
