--- a/templates/dashboard/partials/navbar.html
+++ b/templates/dashboard/partials/navbar.html
@@ -1,12 +1,12 @@
 <!-- Navigation -->
         <nav class="navbar navbar-dark bg-inverse navbar-fixed-top">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <!--<div class="navbar-header">
+            <div class="navbar-header">
                 <button class="navbar-toggler hidden-sm-up pull-sm-right" type="button" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     &#9776;
-                </button>~
+                </button>
                 <a class="navbar-brand" href="index.html">Trips & Trucks</a>
-            </div>-->
+            </div>
             {{> topmenu}}
             {{> sidemenu}}            
         </nav>
